--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@ Assets/Plugins/tvOS/Firebase/libFirebaseCppApp.a filter=lfs diff=lfs merge=lfs -
 Assets/Plugins/iOS/Firebase/libFirebaseCppApp.a filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Editor/network_request.exe filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Editor/generate_xml_from_google_services_json.exe filter=lfs diff=lfs merge=lfs -text
+Assets/Plugins/tvOS/Firebase/libFirebaseCpp Messaging.a filter=lfs diff=lfs merge=lfs -text
+Assets/Plugins/iOS/Firebase/libFirebaseCppMessaging.a filter=lfs diff=lfs merge=lfs -text
