--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,5 @@ Assets/Firebase/Editor/network_request.exe filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Editor/generate_xml_from_google_services_json.exe filter=lfs diff=lfs merge=lfs -text
 Assets/Plugins/tvOS/Firebase/libFirebaseCpp Messaging.a filter=lfs diff=lfs merge=lfs -text
 Assets/Plugins/iOS/Firebase/libFirebaseCppMessaging.a filter=lfs diff=lfs merge=lfs -text
+Assets/Plugins/iOS/Firebase/libFirebaseCppRemoteConfig.a filter=lfs diff=lfs merge=lfs -text
+Assets/Plugins/tvOS/Firebase/libFirebaseCppRemoteConfig.a filter=lfs diff=lfs merge=lfs -text
