comment one line of applovin to fix the not finding ref issue. / fixed build issue.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ ProjectSettings/UnityConnectSettings.asset
 ProjectSettings/VersionControlSettings.asset
 ProjectSettings/VFXManager.asset
 ProjectSettings/XRSettings.asset
+*.keystore
+*.unity
+*.meta
